<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorial_cpp</name>
  <version>0.0.0</version>
  <description>The ros_tutorial_cpp package</description>

  <maintainer email="vscode@todo.todo">vscode</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
